--- a/123.html
+++ b/123.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<img src="123.jpg" width= "100%">
+<img src="123.jpg" width="560" height="315">
 <h1>白いヤギの疎通</h1>
 <ol>
 <li><p><a href="https://twitter.com/fldjfm/statuses/942947795077439488">twitter</a></P></li>
