--- a/123.html
+++ b/123.html
@@ -4,6 +4,14 @@
 <head>
 <title>白いヤギ</title>
 <meta charset = "utf-8">
+<style>
+div{width: :1000px;
+height: 1000px;
+border: :1px solid red;
+padding: :10px;
+margin:10px;
+}
+</style>
 </head>
 
 <body>
