--- a/123.html
+++ b/123.html
@@ -5,16 +5,17 @@
 <title>白いヤギ</title>
 <meta charset = "utf-8">
 <style>
-div{width: :1000px;
-height: 1000px;
-border: :1px solid red;
-padding: :10px;
-margin:10px;
+body{
+
+
+background-image: url('8888.png');
+
 }
 </style>
 </head>
 
 <body>
+
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
